tests/files/flow_controller_tests/should_run/019.cmdr
//Test exponentiate with ints
x = 2 ** 10;
println x;
x **= 2;
println x;