tests/files/flow_controller_tests/should_fail/008.cmdr
//Should fail on modulo by 0 with set
x = 2;
x %= 0;